[package]
name = "proxy-rs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mini_tcp_proxy"
[[bin]]
name = "direct_proxy"

[dependencies]
tokio = { version = "1.47.1", features = ["rt", "net", "rt-multi-thread", "macros", "sync", "io-util"] }

tracing = "0.1.41"
tracing-subscriber = "0.3.20"
anyhow = "1.0.99"
tokio-native-tls = "0.3.1"
native-tls = "0.2.14"
sha2 = "0.10.9"
hex = "0.4.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"

[profile.release]
# opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
# panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.