[package]
name = "rsfly"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mini_tcp_proxy"
[[bin]]
name = "direct_proxy"
[[bin]]
name = "port_forward"

[dependencies]
tokio = { version = "1.48.0", features = ["rt", "net", "rt-multi-thread", "macros", "sync", "io-util", "time"] }
log = "0.4.28"
env_logger = { version = "0.11.8"}
chrono = "0.4.42"
anyhow = "1.0.100"
tokio-native-tls = "0.3.1"
native-tls = "0.2.14"
sha2 = "0.10.9"
hex = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.9.8"
regex = { version = "1.12.2", default-features = false, features = ["std"] }

[dev-dependencies]
prost = "0.14.1"
ipnetwork = "0.21.1"

[build-dependencies]
prost-build = "0.14.1"

[features]
# 你的其他 features...
proto_build = []

[profile.release]
# opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
# panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.